--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "express-starter-trishan9",
+  "name": "express-app-starter",
   "version": "1.0.0",
   "main": "dist/index.ts",
-  "author": "Trishan Wagle",
-  "license": "MIT",
+  "author": "",
+  "license": "",
   "scripts": {
     "dev": "nodemon",
     "build": "tsc && tsc-alias",
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@prisma/client": "^5.9.0",
-    "@types/express": "^4.17.21",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
@@ -24,9 +23,9 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
     "@types/express-session": "^1.17.10",
-    "@types/helmet": "^4.0.0",
     "@types/node": "^20.11.15",
     "cross-env": "^7.0.3",
     "nodemon": "^3.0.3",
